@@ -16,8 +16,10 @@ package org.apache.lucene.search.vectorhighlight;
  * limitations under the License.
  */
 
+import org.apache.lucene.index.Term;
 import org.apache.lucene.search.BooleanQuery;
 import org.apache.lucene.search.BooleanClause.Occur;
+import org.apache.lucene.search.WildcardQuery;
 
 public class FieldTermStackTest extends AbstractTestCase {
   
@@ -158,4 +160,17 @@ public class FieldTermStackTest extends AbstractTestCase {
     assertEquals( "ee(90,92,63)", stack.pop().toString() );
     assertEquals( "ed(91,93,64)", stack.pop().toString() );
   }
+
+  
+  public void testWildcard() throws Exception {
+    makeIndexLongMV();
+    FieldQuery fq = new FieldQuery( new WildcardQuery (new Term(F, "th*e")), reader, true, true );
+    FieldTermStack stack = new FieldTermStack( reader, 0, F, fq );
+    assertEquals (4, stack.termList.size());
+    assertEquals ("the(15,18,2)", stack.pop().toString());
+    assertEquals ("these(133,138,20)", stack.pop().toString());
+    assertEquals ("the(153,156,23)", stack.pop().toString());
+    assertEquals ("the(195,198,31)", stack.pop().toString());
+  }
+
 }
